Complete the hero page and featured products

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce Project</title>
+    <title>ECOMMERCE Project</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,13 +13,205 @@
 
             <div>
                 <ul id="navbar">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="shop.html">Shop</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contanct.html">Contact </a></li>
                     <li><a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></i> </a></li>
                 </ul>
+            </div>
+        </section>
+
+        <section id="hero">
+            <h4>Trade-in-offer</h4>
+            <h2>Super value deals</h2>
+            <h1>On all products</h1>
+            <p>Save more with coupons & up to 70% off!</p>
+            <button>Shop Now</button>
+        </section>
+
+        <section id="feature" class="section-p1">
+            <div class="fe-box">
+                <img src="img/features/f1.png">
+                <h6>Free Shipping</h6>
+            </div>
+
+            <div class="fe-box">
+                <img src="img/features/f2.png">
+                <h6>Online Order</h6>
+            </div>
+
+            <div class="fe-box">
+                <img src="img/features/f3.png">
+                <h6>Save Money</h6>
+            </div>
+
+            <div class="fe-box">
+                <img src="img/features/f4.png">
+                <h6>Promotions</h6>
+            </div>
+
+            <div class="fe-box">
+                <img src="img/features/f5.png">
+                <h6>Happy Sell</h6>
+            </div>
+
+            <div class="fe-box">
+                <img src="img/features/f6.png">
+                <h6>24/7 Support</h6>
+            </div>
+        </section>
+
+        <section id="product1" class="section-p1">
+            <h2>Featured Products</h2>
+            <p>Summer Collection New Modern Design</p>
+            <div class="pro-container">
+                <div class="pro">
+                    <img src="img/products/f1.jpg">
+                    <div class="des">
+                        <span>Adidas</span>
+                        <h5>Color Splash Floral Shirt</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <div class="cart">
+                        <a href="#"><i class="fas fa-cart-shopping" style="color: rgb(54, 164, 168);"></i></a>
+                    </div>
+                </div>
+                <div class="pro">
+                    <img src="img/products/f2.jpg">
+                    <div class="des">
+                        <span>Adidas</span>
+                        <h5>Tropical Leaf Print Shirt</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$45</h4>
+                    </div>
+                    <div class="cart">
+                        <a href="#"><i class="fas fa-cart-shopping" style="color: rgb(54, 164, 168);"></i></a>
+                    </div>
+                </div>
+                <div class="pro">
+                    <img src="img/products/f3.jpg">
+                    <div class="des">
+                        <span>Adidas</span>
+                        <h5>Vintage Rose Garden Shirt</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$68</h4>
+                    </div>
+                    <div class="cart">
+                        <a href="#"><i class="fas fa-cart-shopping" style="color: rgb(54, 164, 168);"></i></a>
+                    </div>
+                </div>
+                <div class="pro">
+                    <img src="img/products/f4.jpg">
+                    <div class="des">
+                        <span>Adidas</span>
+                        <h5>Cherry Blossom White Shirt</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$71</h4>
+                    </div>
+                    <div class="cart">
+                        <a href="#"><i class="fas fa-cart-shopping" style="color: rgb(54, 164, 168);"></i></a>
+                    </div>
+                </div>
+                <div class="pro">
+                    <img src="img/products/f5.jpg">
+                    <div class="des">
+                        <span>Adidas</span>
+                        <h5>Midnight Floral Navy Shirt</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$178</h4>
+                    </div>
+                    <div class="cart">
+                        <a href="#"><i class="fas fa-cart-shopping" style="color: rgb(54, 164, 168);"></i></a>
+                    </div>
+                </div>
+                <div class="pro">
+                    <img src="img/products/f6.jpg">
+                    <div class="des">
+                        <span>Adidas</span>
+                        <h5>Color Block Corduroy Shirt</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$98</h4>
+                    </div>
+                    <div class="cart">
+                        <a href="#"><i class="fas fa-cart-shopping" style="color: rgb(54, 164, 168);"></i></a>
+                    </div>
+                </div>
+                <div class="pro">
+                    <img src="img/products/f7.jpg">
+                    <div class="des">
+                        <span>Adidas</span>
+                        <h5>Boho Linen Floral Pants</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$150</h4>
+                    </div>
+                    <div class="cart">
+                        <a href="#"><i class="fas fa-cart-shopping" style="color: rgb(54, 164, 168);"></i></a>
+                    </div>
+                </div>
+                <div class="pro">
+                    <img src="img/products/f8.jpg">
+                    <div class="des">
+                        <span>Adidas</span>
+                        <h5>Cartoon Cat Print Top</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$90</h4>
+                    </div>
+                    <div class="cart">
+                        <a href="#"><i class="fas fa-cart-shopping" style="color: rgb(54, 164, 168);"></i></a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
