Change name of the product & fotter UI

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <div class="pro">
                     <img src="img/products/n2.jpg">
                     <div class="des">
-                        <span>Adidas</span>
+                        <span>Locaste</span>
                         <h5>Navy Microcheck Cotton Shirt</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
@@ -264,7 +264,7 @@
                 <div class="pro">
                     <img src="img/products/n3.jpg">
                     <div class="des">
-                        <span>Adidas</span>
+                        <span>Luios vittion</span>
                         <h5>Classic White Poplin Shirt</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
@@ -282,7 +282,7 @@
                 <div class="pro">
                     <img src="img/products/n4.jpg">
                     <div class="des">
-                        <span>Adidas</span>
+                        <span>Amiri</span>
                         <h5>Khaki Graphic Print Short Sleeve Shirt</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
@@ -300,7 +300,7 @@
                 <div class="pro">
                     <img src="img/products/n5.jpg">
                     <div class="des">
-                        <span>Adidas</span>
+                        <span>Channel</span>
                         <h5>Light Denim Casual Shirt</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
@@ -318,7 +318,7 @@
                 <div class="pro">
                     <img src="img/products/n6.jpg">
                     <div class="des">
-                        <span>Adidas</span>
+                        <span>Calsta</span>
                         <h5>Striped Seersucker Shorts with Belt</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
@@ -336,7 +336,7 @@
                 <div class="pro">
                     <img src="img/products/n7.jpg">
                     <div class="des">
-                        <span>Adidas</span>
+                        <span>Pro</span>
                         <h5>Charcoal Short Sleeve Button-Up Shirt</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
@@ -354,7 +354,7 @@
                 <div class="pro">
                     <img src="img/products/n8.jpg">
                     <div class="des">
-                        <span>Adidas</span>
+                        <span>Nike</span>
                         <h5>Charcoal Short Sleeve Button-Up Shirt</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
