--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
         
         <footer class="section-p1">
             <div class="col">
-                <img src="img/logo.png" >
+                <img class="logo" src="img/logo.png" >
                 <h4>Contact</h4>
                 <p><strong>Adress:</strong>  562 Wellington Road, Street 32, San Francisco</p>
                 <p><strong>Phone:</strong>  +01 222 365 / (+91) 01 2345 6789</p>
