--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                     <li><a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></i> </a></li>
                 </ul>
             </div>
+            <div id="mobile">
+                <a href="cart.html"><i class="fa fa-shopping-bag" style="color: #000;" aria-hidden="true"></i></i> </a>
+                <i id="bar"  class="fa fa-bars" style="color: #000;"></i>
+            </div>
         </section>
 
         <section id="hero">
