--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
         <section id="header">
             <div onclick="closeSidebarAndBackDrop()" id="active-close" class="active-close"></div>
-            <a href="#"> <img src="./img/logo.png" alt=""></a>
+            <a href="index.html"> <img src="./img/logo.png" alt=""></a>
         
             <div>
                 <ul id="navbar">
@@ -73,7 +73,7 @@
             <h2>Featured Products</h2>
             <p>Summer Collection New Modern Design</p>
             <div class="pro-container">
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html';">
                     <img src="img/products/f1.jpg">
                     <div class="des">
                         <span>Adidas</span>
