--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
 
      <section id="header">
             <div onclick="closeSidebarAndBackDrop()" id="active-close" class="active-close"></div>
-            <a href="#"> <img src="./img/logo.png" alt=""></a>
+            <a href="index.html"> <img src="./img/logo.png" alt=""></a>
         
             <div>
                 <ul id="navbar">
