--- a/sproduct.html
+++ b/sproduct.html
@@ -12,7 +12,7 @@
 
      <section id="header">
             <div onclick="closeSidebarAndBackDrop()" id="active-close" class="active-close"></div>
-            <a href="#"> <img src="./img/logo.png" alt=""></a>
+            <a href="index.html"> <img src="./img/logo.png" alt=""></a>
         
             <div>
                 <ul id="navbar">
@@ -214,7 +214,6 @@
             </div>
         </footer>
 
-
       <!-- <script>
     var mainImg = document.getElementById("mainImg");
     var smallImg = document.getElementsByClassName("small-img");
@@ -237,7 +236,6 @@
     var mainImg = document.getElementById("mainImg");
     var smallImg = document.getElementsByClassName("small-img");
 
-    // Convert HTMLCollection to an array
     Array.from(smallImg).forEach(function(img) {
         img.onclick = function() {
             mainImg.src = this.src;
