--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,15 @@
 
      <section id="header">
             <div onclick="closeSidebarAndBackDrop()" id="active-close" class="active-close"></div>
-            <a href="index.html"> <img src="./img/logo.png" ></a>
+            <a href="index.html"> <img src="./img/logo.png" alt=""></a>
         
             <div>
                 <ul id="navbar">
                     <li><a  href="index.html">Home</a></li>
                     <li><a  href="shop.html">Shop</a></li>
                     <li><a  href="blog.html">Blog</a></li>
-                    <li><a class="active" href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact </a></li>
+                    <li><a  href="about.html">About</a></li>
+                    <li><a class="active" href="contact.html">Contact </a></li>
                     <li id="lg-bag"><a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></i> </a></li>
                     <a href="#" id="close"><i class="fa fa-times" style="color: #000;"></i></a>
                 </ul>
@@ -31,62 +31,72 @@
             </div>
         </section>
 
-        <section id="page-header" class="about-header">
-            <h2>#knowUs</h2>
-            <p>Read all case studies about our products!</p>
+        <section id="page-header" class="contact-header">
+            <h2>#let's_talk</h2>
+            <p>Leave a message, We love to hear from you!</p>
         </section>
 
-        <section id="about-head" class="section-p1">
-            <img src="img/about/a6.jpg" >
-            <div>
-                <h2>Who We Are?</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, numquam? Dolorum culpa error excepturi illum consequuntur sit obcaecati consequatur, quaerat nostrum et odit praesentium soluta esse architecto eos labore deserunt. Commodi eum, enim provident unde nisi alias accusantium hic, fugit ipsum non perferendis dignissimos officia impedit facere illum tenetur eveniet?</p>
+        <section id="contact-details" class="section-p1">
+            <div class="details">
+                <span>Get In Touch</span>
+                <h2>Visit one of out agency locations or contact us today</h2>
+                <h3>Head office</h3>
+                <div>
+                    <li>
+                        <i class="fa fa-map"></i>
+                        <p>56 Glassford Street Glasgow G1 1UL New York</p>
+                    </li>
+                    <li>
+                        <i class="far fa-envelope"></i>
+                        <p>ahmad@gmail.com</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-phone-alt"></i>
+                        <p>ahmad@gmail.com</p>
+                    </li>
+                    <li>
+                        <i class="far fa-clock"></i>
+                        <p>Monday to saturday: 9:00am to 16:00pm</p>
+                    </li>
+                </div>
+            </div>
 
-                <abbr title="">Create stunning images with as much or as little control as you like thanks to a choice of Basic and creative modes.</abbr>
-                <br><br>
-
-                <marquee bgcolor="#ccc" loop="1" scrollamount="5" width="100%">Create stunning images with as much or as little control as you like thanks to a choice of Basic and creative modes.</marquee>
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13540.528534959476!2d69.1743527592277!3d34.53577094399413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38d16ea5b997864b%3A0x928ec03caa07c42c!2sWazir%20Akbar%20Khan%2C%20Kabul%2C%20Afghanistan!5e1!3m2!1sen!2s!4v1754734483755!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
 
-        <section id="about-app" class="section-p1">
-            <h1>Download our <a href="#">App</a></h1>
-            <div class="video">
-                <video autoplay muted loop src="img/about/1.mp4"></video>
-            </div>
-        </section>
-
-                <section id="feature" class="section-p1">
-            <div class="fe-box">
-                <img src="img/features/f1.png">
-                <h6>Free Shipping</h6>
-            </div>
-
-            <div class="fe-box">
-                <img src="img/features/f2.png">
-                <h6>Online Order</h6>
-            </div>
-
-            <div class="fe-box">
-                <img src="img/features/f3.png">
-                <h6>Save Money</h6>
+        <setction id="form-details">
+            <form>
+                <span>LEAVE A MESSAGE</span>
+                <h2>We love to hear from you</h2>
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="E-mail" required>
+                <input type="text" placeholder="Subject" required>
+                <textarea name="" cols="30" rows="10" placeholder="Your Message" id=""></textarea>
+                <button class="normal">Submit</button>
+            </form>
+            <div class="people">
+                <div>
+                    <img src="img/people/1.png">
+                    <p><span>John Doe</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
+                </div>
             </div>
 
-            <div class="fe-box">
-                <img src="img/features/f4.png">
-                <h6>Promotions</h6>
+            <div class="people">
+                <div>
+                    <img src="img/people/2.png">
+                    <p><span>William Smith</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
+                </div>
             </div>
 
-            <div class="fe-box">
-                <img src="img/features/f5.png">
-                <h6>Happy Sell</h6>
+            <div class="people">
+                <div>
+                    <img src="img/people/3.png">
+                    <p><span>Emma Stone</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
+                </div>
             </div>
-
-            <div class="fe-box">
-                <img src="img/features/f6.png">
-                <h6>24/7 Support</h6>
-            </div>
-        </section>
+        </setction>
 
                 <section id="newsletter" class="section-p1 section-m1">
             <div class="newstextt">
