--- a/sproduct.html
+++ b/sproduct.html
@@ -20,7 +20,7 @@
                     <li><a class="active" href="shop.html">Shop</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contanct.html">Contact </a></li>
+                    <li><a href="contact.html">Contact </a></li>
                     <li id="lg-bag"><a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></i> </a></li>
                     <a href="#" id="close"><i class="fa fa-times" style="color: #000;"></i></a>
                 </ul>
