The contat page responsive finnish sucessfully

--- a/contact.html
+++ b/contact.html
@@ -66,37 +66,39 @@
             </div>
         </section>
 
-        <setction id="form-details">
-            <form>
-                <span>LEAVE A MESSAGE</span>
-                <h2>We love to hear from you</h2>
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="E-mail" required>
-                <input type="text" placeholder="Subject" required>
-                <textarea name="" cols="30" rows="10" placeholder="Your Message" id=""></textarea>
-                <button class="normal">Submit</button>
-            </form>
-            <div class="people">
-                <div>
-                    <img src="img/people/1.png">
-                    <p><span>John Doe</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
-                </div>
-            </div>
+      <section id="form-details" class="details-1">
+    <form>
+        <span>LEAVE A MESSAGE</span>
+        <h2>We love to hear from you</h2>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="E-mail" required>
+        <input type="text" placeholder="Subject" required>
+        <textarea cols="30" rows="10" placeholder="Your Message"></textarea>
+        <button class="normal">Submit</button>
+    </form>
 
-            <div class="people">
-                <div>
-                    <img src="img/people/2.png">
-                    <p><span>William Smith</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
-                </div>
+    <div class="people-list">
+        <div class="people">
+            <div>
+                <img src="img/people/1.png">
+                <p><span>John Doe</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
             </div>
+        </div>
+        <div class="people">
+            <div>
+                <img src="img/people/2.png">
+                <p><span>William Smith</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
+            </div>
+        </div>
+        <div class="people">
+            <div>
+                <img src="img/people/3.png">
+                <p><span>Emma Stone</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
+            </div>
+        </div>
+    </div>
+      </section>
 
-            <div class="people">
-                <div>
-                    <img src="img/people/3.png">
-                    <p><span>Emma Stone</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
-                </div>
-            </div>
-        </setction>
 
                 <section id="newsletter" class="section-p1 section-m1">
             <div class="newstextt">
