--- a/cart.html
+++ b/cart.html
@@ -20,8 +20,8 @@
                     <li><a  href="shop.html">Shop</a></li>
                     <li><a  href="blog.html">Blog</a></li>
                     <li><a  href="about.html">About</a></li>
-                    <li><a class="active" href="contact.html">Contact </a></li>
-                    <li id="lg-bag"><a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></i> </a></li>
+                    <li><a  href="contact.html">Contact </a></li>
+                    <li  id="lg-bag"><a class="active" href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></i> </a></li>
                     <a href="#" id="close"><i class="fa fa-times" style="color: #000;"></i></a>
                 </ul>
             </div>
@@ -36,78 +36,78 @@
             <p>Leave a message, We love to hear from you!</p>
         </section>
 
-        <section id="contact-details" class="section-p1">
-            <div class="details">
-                <span>Get In Touch</span>
-                <h2>Visit one of out agency locations or contact us today</h2>
-                <h3>Head office</h3>
-                <div>
-                    <li>
-                        <i class="fa fa-map"></i>
-                        <p>56 Glassford Street Glasgow G1 1UL New York</p>
-                    </li>
-                    <li>
-                        <i class="far fa-envelope"></i>
-                        <p>ahmad@gmail.com</p>
-                    </li>
-                    <li>
-                        <i class="fas fa-phone-alt"></i>
-                        <p>ahmad@gmail.com</p>
-                    </li>
-                    <li>
-                        <i class="far fa-clock"></i>
-                        <p>Monday to saturday: 9:00am to 16:00pm</p>
-                    </li>
-                </div>
-            </div>
+        <section id="cart" class="section-p1">
+            <table width="100%">
+                <thead>
+                    <tr>
+                        <td>Remove</td>
+                        <td>Image</td>
+                        <td>Product</td>
+                        <td>Price</td>
+                        <td>Quantity</td>
+                        <td>Subtotal</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a href="#"><i class="far fa-times-circle" style="color: #000; font-size: 18px;"></i></a></td>
+                        <td><img src="img/products/f1.jpg" alt=""></td>
+                        <td>Cartoon Astronaut T-Shirts</td>
+                        <td>$118.19</td>
+                        <td><input type="number" value="1"></td>
+                        <td>$118.19</td>
+                    </tr>
 
-            <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13540.528534959476!2d69.1743527592277!3d34.53577094399413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38d16ea5b997864b%3A0x928ec03caa07c42c!2sWazir%20Akbar%20Khan%2C%20Kabul%2C%20Afghanistan!5e1!3m2!1sen!2s!4v1754734483755!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+                    <tr>
+                        <td><a href="#"><i class="far fa-times-circle" style=" font-size: 18px; color: #000;"></i></a></td>
+                        <td><img src="img/products/f2.jpg" alt=""></td>
+                        <td>Cartoon Astronaut T-Shirts</td>
+                        <td>$118.19</td>
+                        <td><input type="number" value="1"></td>
+                        <td>$118.19</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="#"><i class="far fa-times-circle" style=" font-size: 18px; color: #000;"></i></a></td>
+                        <td><img src="img/products/f3.jpg" alt=""></td>
+                        <td>Cartoon Astronaut T-Shirts</td>
+                        <td>$118.19</td>
+                        <td><input type="number" value="1"></td>
+                        <td>$118.19</td>
+                    </tr>
+
+                </tbody>
+            </table>
         </section>
 
-       <section id="form-details" class="details-1">
-    <form>
-        <span>LEAVE A MESSAGE</span>
-        <h2>We love to hear from you</h2>
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="E-mail" required>
-        <input type="text" placeholder="Subject" required>
-        <textarea cols="30" rows="10" placeholder="Your Message"></textarea>
-        <button class="normal">Submit</button>
-    </form>
+        <section id="cart-add" class="section-p1">
+            <div id="coupon">
+                <h3>Apply Coupon</h3>
+            
+            <div>
+                <input type="text" placeholder="Enter Your Coupon">
+                <button class="normal">Apply</button>
+            </div>
+        </div>
 
-    <div class="people-list">
-        <div class="people">
-            <div>
-                <img src="img/people/1.png">
-                <p><span>John Doe</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
-            </div>
+        <div id="subtotal">
+            <h3>Cart Totals</h3>
+            <table>
+                <tr>
+                    <td>Cart Subtotal</td>
+                    <td>$ 335</td>
+                </tr>
+                <tr>
+                    <td>Shipping</td>
+                    <td>Free</td>
+                </tr>
+                <tr>
+                    <td><strong>Total </strong></td>
+                    <td><strong>$335 </strong></td>
+                </tr>
+            </table>
+            <button class="normal">Proceed to Checkout</button>
         </div>
-        <div class="people">
-            <div>
-                <img src="img/people/2.png">
-                <p><span>William Smith</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
-            </div>
-        </div>
-        <div class="people">
-            <div>
-                <img src="img/people/3.png">
-                <p><span>Emma Stone</span> Senior Marketing Manger <br> Phone: +93774686492 <br> Email: contact@gmail.com</p>
-            </div>
-        </div>
-    </div>
-       </section>
-
-        <section id="newsletter" class="section-p1 section-m1">
-            <div class="newstextt">
-                <h4>Sign Up For Newsletters</h4>
-                <p>Get E-mail updates about our latest shop and <span>Specail Offers.</span></p>
-            </div>
-            <div class="form">
-                <input type="text" placeholder="Your email adress">
-                <button class="normal">Sign Up</button>
-            </div>
         </section>
         
        <footer class="section-p1">
